lib_LTLIBRARIES = libskstream-0.2.la
libskstream_0_2_la_LDFLAGS = -version-info @SKSTREAM_VERSION_INFO@

libskstream_0_2_la_SOURCES = skstream.cpp skserver.cpp skpoll.cpp

libskstreamincludedir = $(includedir)/skstream-0.2/skstream
libskstreaminclude_HEADERS = skstream.h skserver.h skpoll.h sasproto.h
